Add Joystick handling and Split Screen mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+ptext.py
+
 
 # Created by https://www.gitignore.io/api/python,pycharm
 # Edit at https://www.gitignore.io/?templates=python,pycharm
@@ -84,7 +86,6 @@ fabric.properties
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
 *$py.class
 
 # C extensions
