--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+black = "*"
+mypy = "*"
 
 [packages]
-pygame = "*"
+pygame = "==1.*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
