Add basic online functionality
Former-commit-id: d42e291dc7b5dc93a08d065056986a66b9739694

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,3 +9,12 @@ ignore_missing_imports = True
 
 [mypy-pygame.locals]
 ignore_missing_imports = True
+
+[mypy-jsonpickle]
+ignore_missing_imports = True
+
+[mypy-lz4]
+ignore_missing_imports = True
+
+[mypy-lz4.frame]
+ignore_missing_imports = True
